# event-orders

./: .gitignore  pyproject.toml
.github/workflows/: lint.yml
src/: main.py
src/core/: config.py  database.py  dependencies.py  security.py
src/middlewares/: __init__.py  cors.py
src/modules/orders/: models.py  repository.py  routes.py  schemas.py  service.py
src/modules/shared/: models.py
src/modules/users/: models.py  repository.py  routes.py  schemas.py  service.py
