[project]
name = "event-orders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.121.2",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=7.0.0",
]
